[package]
name = "sample-data-uploader"
version = "0.1.0"
authors = ["Kaboomtastic <james.java.sullivan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["json"] }
futures = "0.3"
tokio = { version = "1.5.0", features = ["full"] }
sled = "0.31.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
ethereum-hexutil = "0.2.3"
serde_urlencoded = "0.7.0"